# Gateway

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  config.json  config.yaml  config_villas.json  flake.nix  opc-ua.conf  opc-ua.json  pyproject.toml  readout_umg801.py  requirements-dev.txt  requirements.txt  seguro-gateway-config.nix  villas-config-generator.nix
.reuse/: dep5
config/: gateway.json  opc-ua-villas.json  opc-ua.json  villas-node.json
nix/: seguro-gateway-config.nix  shell.nix
nix/nixosConfigurations/gateway-vm/: configuration.nix
nix/nixosConfigurations/rpi/: configuration.nix
nix/nixosConfigurations/rpi-1/: configuration.nix  default.nix
nix/nixosConfigurations/rpi-installer/: configuration.nix  default.nix  hardware-configuration.nix
nix/nixosConfigurations/seguro-rpi-1/: configuration.nix
nix/nixosConfigurations/vm/: configuration.nix  default.nix
nix/nixosModules/auto-update/: default.nix
nix/nixosModules/gateway/: cert-renewal.nix  default.nix  heartbeat-sender.nix  provision.nix  tools.nix  villas.nix
nix/nixosModules/gateway-rpi/: default.nix
nix/nixosModules/gateway-vm/: default.nix
nix/nixosModules/nix/: default.nix
nix/nixosModules/rpi-base/: README.md  configuration.nix  default.nix  hardware-configuration.nix
nix/nixosModules/rpi-base-impermanent/: README.md  configuration.nix  default.nix  hardware-configuration.nix
nix/nixosModules/rpi4-tpm2/: default.nix
nix/nixosModules/secrets/: default.nix
nix/nixosModules/tpm2/: default.nix
nix/nixosModules/users/: default.nix
nix/secrets/: README.md  secrets.nix
seguro/gateway/: config_parser.py  publishing_handler.py  readout_umg.py  readout_umg801.py  subscription_handler.py
src/: config_parser.py  logger.py  logging.py  publishing_handler.py  readout_umg.py  readout_umg801.py  subscription_handler.py
(+6 files in other folders)
