# SPDX-FileCopyrightText: 2024 OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "seguro-gateway"
version = "0.1.0"
description = ""
authors = ["Felix Wege <felix.wege@eonerc.rwth-aachen.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "seguro"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/SEGuRo-Projekt/Gateway"
"Bug Tracker" = "https://github.com/SEGuRo-Projekt/Gateway/issues"

[tool.poetry.dependencies]
python = "^3.11"
asyncua = "1.0.4"
pyyaml = "^6.0.1"
schema = "^0.7.5"
cryptography = "42.0.5"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
pre-commit = "3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
opcua-readout = "seguro.gateway.opc_ua.readout:main"
opcua-mockup = "seguro.gateway.opc_ua.mockup:main"

[tool.black]
line-length = 79
